[project]
name = "plot-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax",
    "matplotlib",
    "numpy",
    "scipy",
    "seaborn",
    "truncnormkde",
]

[tool.uv.sources]
truncnormkde = { git = "https://github.com/Potatoasad/truncnormkde" }


[tool.setuptools.package-data]
yourpkg = ["*.mplstyle"]

# Optional but recommended for source distributions:
[tool.setuptools]
include-package-data = true