[project]
name = "plot-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax",
    "matplotlib",
    "numpy",
    "scipy",
    "seaborn",
    "truncnormkde",
]

[tool.uv.sources]
truncnormkde = { git = "https://github.com/Potatoasad/truncnormkde" }

[tool.setuptools.packages.find]
include = ["plot_helper*"]

[tool.setuptools.package-data]
yourpkg = ["*.mplstyle"]

[tool.setuptools]
include-package-data = true