[project]
name = "plot_helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax",
    "matplotlib",
    "numpy",
    "scipy",
    "seaborn",
    "truncnormkde",
]

[tool.uv.sources]
truncnormkde = { git = "https://github.com/Potatoasad/truncnormkde" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml,
# so you do NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plot_helper = ["*.mplstyle"]
